# kvmui

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
src/: kvmuiui.rc  main.cpp  mainwindow.cpp  mainwindow.h  vminfo.cpp  vminfo.h  vmprovider.cpp  vmprovider.h  vmprovideraddwizard.cpp  vmprovideraddwizard.h
src/providers/: quickemu.cpp  quickemu.h
